<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">文件管理</string>
    <string name="action_settings">设置</string>
    <string name="view_settings">切换视图</string>
    <string name="search_settings">搜索</string>
    <string name="stroage_settings">存储状态</string>
    <string name="create_settings">新建</string>
    <string name="apk_settings">应用管理</string>
    <string name="edit_settings">编辑</string>
    <string name="section_settings">排序</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_files">没有文件</string>
    <string name="close_app">退出应用？</string>
    <string name="pressed_twice_outline">连按两次退出</string>
    <string name="create_question">新建</string>
    <string name="ok">确定</string>
    <string name="will_be_compress">将被压缩为：</string>
    <string name="cancel">取消</string>
    <string name="choice_all">全选</string>
    <string name="choice_all_not">全不选</string>
    <string name="action">操作</string>
    <string name="new_file_f">新建文件.txt</string>
    <string name="new_file_d">新建文件夹</string>
    <string name="file_had_exits">文件已经存在</string>
    <string name="file_created_failed">文件创建失败</string>
    <string name="dir_had_exits">文件夹已存在</string>
    <string name="rename">重命名</string>
    <string name="delete">删除</string>
    <string name="delete_file">文件 %1$s 将要被删除 </string>
    <string name="delete_dir">文件夹 %1$s 将要被删除 </string>
    <string name="delete_list">%1$d个文件夹，%2$d个文件将会被删除</string>
    <string name="delete_list_file">%1$d个文件将会被删除</string>
    <string name="delete_list_dir">%1$d个文件夹将会被删除</string>
    <string name="delete_collect_file">文件 %1$s 将要被取消收藏 </string>
    <string name="delete_collect_dir">文件夹 %1$s 将要被取消收藏 </string>
    <string name="deleteng">删除中.......</string>
    <string name="copying">复制中.......</string>
    <string name="compresseng">压缩中.......</string>
    <string name="file_detail">详细信息</string>
    <string name="location">位置:</string>
    <string name="contains">内容:</string>
    <string name="kinds">类型:</string>
    <string name="stroage">大小:</string>
    <string name="stroage_satae">存储状态</string>
    <string name="last_modifed">修改时间:</string>
    <string name="file">文件</string>
    <string name="text_file">%1$s∈文本文件</string>
    <string name="document_file">%1$s∈文档文件</string>
    <string name="png_file">%1$s∈图像文件</string>
    <string name="unknowfile">%1$s∈未知文件</string>
    <string name="music_file">%1$s∈音频文件</string>
    <string name="vido_file">%1$s∈视频文件</string>
    <string name="apk_file">%1$s∈app安装文件</string>
    <string name="csv_file">%1$s∈联系人备份文件</string>
    <string name="vcf_file">%1$s∈联系人备份文件</string>
    <string name="font_file">%1$s∈字体文件</string>
    <string name="dat_file">%1$s∈脚本文件</string>
    <string name="log_file">%1$s∈日志文件</string>
    <string name="web_file">%1$s∈WEB文本文件</string>
    <string name="net_file">%1$s∈网页文件</string>
    <string name="compressed_file">%1$s∈压缩文件</string>
    <string name="folder">文件夹</string>
    <string name="number_folder_contents">%1$d个文件夹，%2$d个文件</string>
    <string name="number_folder_caintins">%1$d项</string>
    <string name="show_hide_file">显示隐藏文件</string>
    <string name="number_folder_first">%1$d项</string>
    <string name="apk_manger">应用管理</string>
    <string name="user_apk">个人应用</string>
    <string name="all_apk">全部应用</string>
    <string name="system_apk">系统应用</string>
    <string name="backup_success">%1$s备份成功</string>
    <string name="compress">压缩文件</string>
    <string name="compress_success">压缩文件</string>
    <string name="new_compress">新建压缩包</string>
    <string name="show_hide_files">是否显示系统文件 </string>
    <string name="show_hide_files1">在列表中显示系统文件</string>
    <string name="not_show_hide_files">隐藏系统文件</string>
    <string name="apk_files_back_up">设置应用备份位置</string>
    <string name="error_input">路径输入为空！！！</string>
    <string name="manger_file">设置管理</string>
    <string name="manger_file_another_funcation">附加功能</string>
    <string name="show_ip_address">显示手机IP地址</string>
    <string name="show_ip_address1">点击查看手机当前IP地址</string>
    <string name="show_phone_stroage">是否显示手机存储状态</string>
    <string name="show_phone_stroage1">点击显示手机存储空间使用情況</string>
    <string name="clear_back_up">删除备份</string>
    <string name="clear_all_back_apps">清除所有备份的文件/app等数据</string>
    <string name="clear_all_back_data">清除所有的备份文件、应用安装包等数据</string>
    <string name="update_app">查看是否有新的版本更新</string>
    <string name="update">检查更新</string>
    <string name="suggestion">欢迎提出建议</string>
    <string name="ip_adress">当前手机联网IP</string>
    <string name="setting">设置</string>
    <string name="search">%1$s的搜索结果</string>
    <string name="suggest">意见反馈</string>
    <string name="back">返回</string>
    <string name="your_suggestion">您的建议</string>
    <string name="default_path">备份路径默认保存在SD卡根目录</string>
    <string name="suggestion_hint">请输入您的宝贵意见，我们将为您不断改进（可输入240字）</string>
    <string name="contact_hint">邮箱或手机</string>
    <string name="suggestion_tips">您的建议不能为空</string>
    <string name="suggestion_contact">联系方式</string>
    <string name="contact_tips">联系方式不能为空</string>
    <string name="commit_failed_network">提交失败，请检查您的网络</string>
    <string name="commit_success_msg">您的反馈已提交，谢谢您的参与！</string>
    <string name="contact_check">联系方式不合法</string>
    <string name="commit">提交</string>
    <string name="commiting_wait">"正在提交..."</string>
    <string name="sdcard_error">SD卡已经拔出，应用在此模式下不可用</string>
    <string name="sort">排序</string>
    <string name="phone_inner">手机内部存储空间：</string>
    <string name="stroage_view">(可用)%1$s/%2$s</string>
    <string name="phone_outer">手机SD卡存储空间：</string>
    <string name="search_title">搜索</string>
    <string name="search_hide">"搜索文件"</string>
    <string name="error_string">搜索字符中不可以有\</string>
    <string name="title_barcode">条码扫描结果</string>
    <string name="open_barcode">是否打开链接？</string>
    <string name="qcode_barcode">二维码扫描结果</string>
    <string name="title_barcode_message_top">"条形码："</string>
    <string name="barcode_title">上传</string>
    <string name="barcode_msg_close">"条形码信息上传功能暂时关闭"</string>
    <string name="barcode_msg_no_sense">无效条形码</string>
    <string name="barcode_location">请将条码置于扫描框内</string>
    <string name="error_blank">请输入搜索内容</string>
    <string name="searching">搜索中......</string>
    <string name="paste_all">全部粘贴</string>
    <string name="clear_paste_bode">清空剪粘板</string>
    <string name="delete_paste_item">剪贴板选项</string>
    <string name="paste_bonde_name">剪贴板</string>
    <string name="error_path">本路径已存在，可继续设置可重新修改</string>
    <string name="music">音乐</string>
    <string name="theme">主题</string>
    <string name="sd_card_size">手机U盘:<xliff:g id="total_size">%1$s</xliff:g></string>
    <string name="sd_card_available">可用空间:<xliff:g id="available_size">%1$s</xliff:g></string>
    <string name="process">进程清理</string>
    <string name="rubbish">垃圾清除</string>
    <string name="data">联网管理</string>
    <string name="cache">缓存清理</string>
    <string name="video">视频</string>
    <string name="picture">图片</string>
    <string name="document">文档</string>
    <string name="collection">收藏</string>
    <string name="wifi_state">"手机当前WiFi状态: "</string>
    <string name="instruction_pre">启动后可以从电脑端远程管理手机文件</string>
    <string name="instruction">请在“我的电脑”地址栏中输入：</string>
    <string name="start_server">启动服务</string>
    <string name="stop_server">停止服务</string>
    <string name="notif_server_starting">远程管理服务已启动</string>
    <string name="notif_title">远程管理服务正在运行</string>
    <string name="no_wifi_hint">没有连接到WiFi</string>
    <string name="no_wifi_hint1">无WiFi网络连接,点击WiFi按钮进行设置</string>
    <string name="storage_warning">外部存储不可用.</string>
    <string name="no_wifi">无WiFi网络</string>
    <string name="apk">安装包</string>
    <string name="other">其他</string>
    <string name="compress_bag">压缩包</string>
    <string name="no_music">没有音乐文件</string>
    <string name="no_video">没有视频文件</string>
    <string name="no_apk">没有安装包文件</string>
    <string name="no_compress">没有压缩包文件</string>
    <string name="scaning">扫描中.......</string>
    <string name="no_picture">没有图片文件</string>
    <string name="no_documents">没有文档文件</string>
    <string name="no_theme">没有主题文件</string>
    <string name="no_collection">没有收藏文件</string>
    <string name="app_search_error">无法加载app软件 </string>
    <string name="collect_success">添加收藏成功</string>
    <string name="collect_fail">添加收藏失敗</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="cancel_collect_fail">取消收藏失敗</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="loading">加载中。。。。。。</string>

</resources>