<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/create_settings"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/create_settings"/>
    <item
        android:id="@+id/search_settings"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="11"
        android:showAsAction="always"
        android:title="@string/search_settings"/>
    <item
        android:id="@+id/switch_settings"
        android:icon="@drawable/ic_menu_grid"
        android:orderInCategory="12"
        android:showAsAction="always"
        android:title="@string/view_settings"/>
    <item
        android:id="@+id/action_editting"
        android:icon="@drawable/ic_menu_agenda"
        android:orderInCategory="13"
        android:showAsAction="always"
        android:title="@string/edit_settings"/>
    <item
        android:id="@+id/sector_settings"
        android:icon="@drawable/ic_menu_sort_alphabetically"
        android:orderInCategory="14"
        android:showAsAction="always"
        android:title="@string/section_settings"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="15"
        android:showAsAction="always"
        android:title="@string/action_settings"/>

</menu>