<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/whole_background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/wifi_state_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/wifi_state4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:singleLine="false"
                android:text="@string/wifi_state"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/wifi_state"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/wifi_state"
                android:textColor="@color/black" />
        </LinearLayout>
        <TextView
                android:id="@+id/wifi_state1"
                style="?android:attr/textAppearanceSmall"
                android:layout_marginTop="4dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/no_wifi_hint1"
                android:textColor="@color/back_btn_font"
                android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/instruction_pre"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/instruction_pre"
            android:visibility="gone" />

        <TextView
            android:id="@+id/instruction"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/instruction" />

        <TextView
            android:id="@+id/ip_address"
            android:layout_width="274dip"
            android:layout_height="40dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15px"
            android:layout_marginBottom="30dip"
            android:background="@drawable/ipaddress_bg"
            android:gravity="center"
            android:minWidth="150px"
            android:paddingLeft="15px"
            android:paddingRight="15px"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/start_stop_button"
            android:layout_width="274dip"
            android:layout_height="40dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="80dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/btn_bottom_last"
            android:gravity="center" >

            <TextView
                android:id="@+id/start_stop_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10px"
                android:gravity="center"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>